--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     <!-- Bootstrap -->
     <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="assets/css/style.css" rel="stylesheet" />
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -20,12 +21,48 @@
 </head>
 
 <body>
-    <h1>Hello, world!</h1>
+    <div class="container-fluid">
+        <div class="row">
+            <nav role="navigation" class="navbar navbar-inverse">
+                <div class="container">
+                    <div class="navbar-header header">
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-lg-12">
+                                    <h1>
+                                        <a href="#">КиноМонстр</a>
+                                    </h1>
+                                    <p>Кино - наша страсть !</p>
+                                </div>
+                            </div>
+                        </div>
+                        <button type="button" data-target="#navbarCollapse" data-toggle="collapse" class="navbar-toggle">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
+                    </div>
+                    <div id="navbarCollapse" class="collapse navbar-collapse navbar-right">
+                        <ul class="nav nav-pills">
+                            <li class="active">
+                                <a href="#">Главная</a>
+                            </li>
+                            <li><a href="#">Фильмы</a></li>
+                            <li><a href="#">Сериалы</a></li>
+                            <li><a href="#">Рейтинг фильмов</a></li>
+                            <li><a href="#">Контакты</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+        </div>
+    </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src=" https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js "></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="assets/js/bootstrap.min.js"></script>
+    <script src="assets/js/bootstrap.min.js "></script>
 </body>
 
 </html>
