--- a/index.html
+++ b/index.html
@@ -64,23 +64,34 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-9 col-lg-push-3">
+                    <form role="search" class="visible-xs">
+                        <div class="form-group">
+                            <div class="input-group">
+                                <input type="search " class="form-control input-lg" placeholder="ваш запрос " />
+                                <div class="input-group-btn">
+                                    <botton class="btn btn-default btn-lg" type="submit "><i class="glyphicon glyphicon-search"></i>
+                                    </botton>
+                                </div>
+                            </div>
+                        </div>
+                    </form>
                     <h2>Новые фильмы</h2>
                     <hr />
                     <div class="row">
                         <div class="films_block col-lg-3 col-md-3 col-sm-3 col-xs-6">
-                            <img src="assets/img/inter.png" alt="интерстеллар" />
+                            <img src="assets/img/inter.png " alt="интерстеллар " />
                             <div class="film_label">Интерстеллар</div>
                         </div>
                         <div class="films_block col-lg-3 col-md-3 col-sm-3 col-xs-6">
-                            <img src="assets/img/matrix.png" alt="матрица" />
+                            <img src="assets/img/matrix.png " alt="матрица " />
                             <div class="film_label">Матрица</div>
                         </div>
                         <div class="films_block col-lg-3 col-md-3 col-sm-3 col-xs-6">
-                            <img src="assets/img/cloud.png" alt="облачный атлас" />
+                            <img src="assets/img/cloud.png " alt="облачный атлас " />
                             <div class="film_label">Облачный атлас</div>
                         </div>
                         <div class="films_block col-lg-3 col-md-3 col-sm-3 col-xs-6">
-                            <img src="assets/img/max.png" alt="безумный макс" />
+                            <img src="assets/img/max.png " alt="безумный макс " />
                             <div class="film_label">Безумный Макс</div>
                         </div>
                     </div>
@@ -89,26 +100,136 @@
                     <hr />
                     <div class="row">
                         <div class="films_block col-lg-3 col-md-3 col-sm-3 col-xs-6">
-                            <img src="assets/img/xfiles.png" alt="секретные материалы" />
+                            <img src="assets/img/xfiles.png " alt="секретные материалы " />
                             <div class="film_label">Секретные материалы</div>
                         </div>
                         <div class="films_block col-lg-3 col-md-3 col-sm-3 col-xs-6">
-                            <img src="assets/img/silicon.png" alt="кремниевая долина" />
+                            <img src="assets/img/silicon.png " alt="кремниевая долина " />
                             <div class="film_label">Кремниевая долина</div>
                         </div>
                         <div class="films_block col-lg-3 col-md-3 col-sm-3 col-xs-6">
-                            <img src="assets/img/dead.png" alt="ходячие мертвецы" />
+                            <img src="assets/img/dead.png " alt="ходячие мертвецы " />
                             <div class="film_label">Ходячие мертвецы</div>
                         </div>
                         <div class="films_block col-lg-3 col-md-3 col-sm-3 col-xs-6">
-                            <img src="assets/img/breakingbad.png" alt="во все тяжкие" />
+                            <img src="assets/img/breakingbad.png " alt="во все тяжкие " />
                             <div class="film_label">Во все тяжкие</div>
                         </div>
-                        <div class="margin-8"></div>
                     </div>
+                    <div class="margin-8"></div>
+
+                    <a href="# ">
+                        <h3>Как снимали Интерстеллар</h3>
+                    </a>
+                    <hr />
+                    <p>
+                        45 лет исполнилось Кристоферу Нолану — одному из самых успешных режиссеров нашего времени, чьи работы одинаково любимы как взыскательными критиками, так и простыми зрителями. Фильмом изначально занималась студия Paramount. Когда Кристофер Нолан занял
+                        место режиссера, студия Warner Bros., которая выпускала его последние фильмы, добилась участия в проекте.
+                    </p>
+                    <a href="# " class="btn btn-warning pull-right">читать</a>
+                    <div class="margin-8"></div>
+                    <a href="# ">
+                        <h3>Актер Том Хенкс поделился впечатлением о фестивале</h3>
+                    </a>
+                    <hr />
+                    <p>
+                        16 февраля в Лондоне состоялась 67-я церемония вручения наград Британской киноакадемии. Леонардо ДиКаприо, Брэд Питт, Анджелина Джоли, Кейт Бланшетт, Хелен Миррен, Эми Адамс, Кристиан Бэйл, Альфонсо Куарон и другие гости и победители премии — в нашем
+                        репортаже.
+                    </p>
+                    <a href="# " class="btn btn-warning pull-right">читать</a>
+
+                    <div class="margin-8 clear"></div>
                 </div>
 
-                <div class="col-lg-3 col-lg-pull-9">Lorem ipsum dolor</div>
+                <div class="col-lg-3 col-lg-pull-9">
+                    <div class="panel panel-info hidden-xs">
+                        <div class="panel-heading">
+                            <div class="sidebar-header">Поиск</div>
+                        </div>
+                        <div class="panel-body">
+                            <form role="search ">
+                                <div class="form-group">
+                                    <div class="input-group">
+                                        <span class="input-group-addon">@</span>
+                                        <input type="search " class="form-control input-lg" placeholder="ваш запрос " />
+                                        <div class="input-group-btn">
+                                            <botton class="btn btn-default btn-lg" type="submit "><i class="glyphicon glyphicon-search"></i>
+                                            </botton>
+                                        </div>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                    <div class="panel panel-info">
+                        <div class="panel-heading">
+                            <div class="sidebar-header">Вход</div>
+                        </div>
+                        <div class="panel-body">
+                            <form role="form ">
+                                <div class="form-group">
+                                    <input type="text " class="form-control input-lg" placeholder="Логин " />
+                                </div>
+                                <div class="form-group">
+                                    <input type="password " class="form-control input-lg" placeholder="Пароль " />
+                                </div>
+                                <button type="submit " class="btn btn-warning pull-right">
+                    вход
+                  </button>
+                            </form>
+                        </div>
+                    </div>
+                    <div class="panel panel-info">
+                        <div class="panel-heading">
+                            <div class="sidebar-header">Новости</div>
+                        </div>
+                        <div class="panel-body">
+                            <p>31.02.2017</p>
+                            <p>Мы запустили новый сервис</p>
+                        </div>
+                    </div>
+                    <div class="panel panel-info">
+                        <div class="panel-heading">
+                            <div class="sidebar-header">Рейтинг фильмов</div>
+                        </div>
+                        <div class="panel-body">
+                            <ul class="list-group">
+                                <li class="list-group-item list-group-warning">
+                                    <span class="badge">8.9</span>
+                                    <a href="# ">Интерстеллар</a>
+                                </li>
+                                <li class="list-group-item list-group-warning">
+                                    <span class="badge">8.7</span>
+                                    <a href="# ">Безумный Макс</a>
+                                </li>
+                                <li class="list-group-item list-group-warning">
+                                    <span class="badge">8.3</span>
+                                    <a href="# ">Матрица</a>
+                                </li>
+                                <li class="list-group-item list-group-warning">
+                                    <span class="badge">8.1</span>
+                                    <a href="# ">Облачный атлас</a>
+                                </li>
+                                <li class="list-group-item list-group-warning">
+                                    <span class="badge">8.9</span>
+                                    <a href="# ">Интерстеллар</a>
+                                </li>
+                                <li class="list-group-item list-group-warning">
+                                    <span class="badge">8.9</span>
+                                    <a href="# ">Интерстеллар</a>
+                                </li>
+                                <li class="list-group-item list-group-warning">
+                                    <span class="badge">8.9</span>
+                                    <a href="# ">Интерстеллар</a>
+                                </li>
+                                <li class="list-group-item list-group-warning">
+                                    <span class="badge">8.9</span>
+                                    <a href="# ">Интерстеллар</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
@@ -117,14 +238,14 @@
 
     <footer>
         <div class="container">
-            <p class="text-center"><a href="http://ru.wh-db.com">WH-DB.COM</a></p>
+            <p class="text-center"><a href="http://ru.wh-db.com ">WH-DB.COM</a></p>
         </div>
     </footer>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js "></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="assets/js/bootstrap.min.js"></script>
+    <script src="assets/js/bootstrap.min.js "></script>
 </body>
 
 </html>
