--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Киномонстр Bootstrap</title>
+    <title>Контакты</title>
 
     <!-- Bootstrap -->
     <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
@@ -32,7 +32,7 @@
                         <div class="container">
                             <div class="row">
                                 <div class="col-lg-12">
-                                    <h1><a href="#">КиноМонстр</a></h1>
+                                    <h1><a href="index.html">КиноМонстр</a></h1>
                                     <p>Кино - наша страсть!</p>
                                 </div>
                             </div>
@@ -48,11 +48,11 @@
 
                     <div id="navbarCollapse" class="collapse navbar-collapse navbar-right">
                         <ul class="nav nav-pills">
-                            <li><a href="#">Главная</a></li>
-                            <li><a href="#">Фильмы</a></li>
+                            <li><a href="index.html">Главная</a></li>
+                            <li><a href="films.html">Фильмы</a></li>
                             <li><a href="#">Сериалы</a></li>
-                            <li><a href="#">Рейтинг фильмов</a></li>
-                            <li class="active"><a href="#">Контакты</a></li>
+                            <li><a href="rating.html">Рейтинг фильмов</a></li>
+                            <li class="active"><a href="contact.html">Контакты</a></li>
                         </ul>
                     </div>
                 </div>
@@ -150,7 +150,7 @@
                             <ul class="list-group">
                                 <li class="list-group-item list-group-warning">
                                     <span class="badge">8.9</span>
-                                    <a href="# ">Интерстеллар</a>
+                                    <a href="show.html">Интерстеллар</a>
                                 </li>
                                 <li class="list-group-item list-group-warning">
                                     <span class="badge">8.7</span>
