--- a/films.html
+++ b/films.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Киномонстр Bootstrap</title>
+    <title>Фильмы</title>
 
     <!-- Bootstrap -->
     <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
@@ -32,13 +32,13 @@
                         <div class="container">
                             <div class="row">
                                 <div class="col-lg-12">
-                                    <h1><a href="#">КиноМонстр</a></h1>
+                                    <h1><a href="index.html">КиноМонстр</a></h1>
                                     <p>Кино - наша страсть!</p>
                                 </div>
                             </div>
                         </div>
 
-                        <button type="button" data-target="#navbarCollapse" data-toggle="collapse" class="navbar-toggle">
+                        <button type="button" data-target="navbarCollapse" data-toggle="collapse" class="navbar-toggle">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -48,11 +48,11 @@
 
                     <div id="navbarCollapse" class="collapse navbar-collapse navbar-right">
                         <ul class="nav nav-pills">
-                            <li><a href="#">Главная</a></li>
+                            <li><a href="index.html">Главная</a></li>
                             <li class="active"><a href="#">Фильмы</a></li>
                             <li><a href="#">Сериалы</a></li>
-                            <li><a href="#">Рейтинг фильмов</a></li>
-                            <li><a href="#">Контакты</a></li>
+                            <li><a href="rating.html">Рейтинг фильмов</a></li>
+                            <li><a href="contact.html">Контакты</a></li>
                         </ul>
                     </div>
                 </div>
@@ -89,7 +89,7 @@
                                 </p>
                             </div>
                             <div class="col-lg-12">
-                                <a href="" class="btn btn-lg btn-warning pull-right">подробнее</a
+                                <a href="show.html" class="btn btn-lg btn-warning pull-right">подробнее</a
                   >
                 </div>
               </div>
