--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
                         <div class="container">
                             <div class="row">
                                 <div class="col-lg-12">
-                                    <h1><a href="#">КиноМонстр</a></h1>
+                                    <h1><a href="index.html">КиноМонстр</a></h1>
                                     <p>Кино - наша страсть!</p>
                                 </div>
                             </div>
                         </div>
 
-                        <button type="button" data-target="#navbarCollapse" data-toggle="collapse" class="navbar-toggle">
+                        <button type="button" data-target="navbarCollapse" data-toggle="collapse" class="navbar-toggle">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -48,11 +48,11 @@
 
                     <div id="navbarCollapse" class="collapse navbar-collapse navbar-right">
                         <ul class="nav nav-pills">
-                            <li class="active"><a href="#">Главная</a></li>
-                            <li><a href="#">Фильмы</a></li>
+                            <li class="active"><a href="index.html">Главная</a></li>
+                            <li><a href="films.html">Фильмы</a></li>
                             <li><a href="#">Сериалы</a></li>
-                            <li><a href="#">Рейтинг фильмов</a></li>
-                            <li><a href="#">Контакты</a></li>
+                            <li><a href="rating.html">Рейтинг фильмов</a></li>
+                            <li><a href="contact.html">Контакты</a></li>
                         </ul>
                     </div>
                 </div>
@@ -118,7 +118,7 @@
                     </div>
                     <div class="margin-8"></div>
 
-                    <a href="# ">
+                    <a href="show.html">
                         <h3>Как снимали Интерстеллар</h3>
                     </a>
                     <hr />
@@ -196,7 +196,7 @@
                             <ul class="list-group">
                                 <li class="list-group-item list-group-warning">
                                     <span class="badge">8.9</span>
-                                    <a href="# ">Интерстеллар</a>
+                                    <a href="show.html">Интерстеллар</a>
                                 </li>
                                 <li class="list-group-item list-group-warning">
                                     <span class="badge">8.7</span>
