--- a/rating.html
+++ b/rating.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Киномонстр Bootstrap</title>
+    <title>Рейтинг фильмов</title>
 
     <!-- Bootstrap -->
     <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
@@ -49,9 +49,9 @@
                     <div id="navbarCollapse" class="collapse navbar-collapse navbar-right">
                         <ul class="nav nav-pills">
                             <li><a href="index.html">Главная</a></li>
-                            <li class="active"><a href="films.html">Фильмы</a></li>
+                            <li><a href="films.html">Фильмы</a></li>
                             <li><a href="#">Сериалы</a></li>
-                            <li><a href="rating.html">Рейтинг фильмов</a></li>
+                            <li class="active"><a href="rating.html">Рейтинг фильмов</a></li>
                             <li><a href="contact.html">Контакты</a></li>
                         </ul>
                     </div>
@@ -75,49 +75,70 @@
                             </div>
                         </div>
                     </form>
-                    <h1>Интерстеллар</h1>
+                    <h1>Рейтинг фильмов</h1>
                     <hr />
-                    <div class="embed-responsive embed-responsive-16by9">
-                        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/qcPfI0y7wRU?start=1 " title="YouTube video player " frameborder="0 " allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture " allowfullscreen></iframe>
-                    </div>
-                    <div class="well info-block text-center">
-                        Год: <span class="badge">2014</span> Рейтинг:
-                        <span class="badge">8.9</span> Режиссёр:
-                        <span class="badge">Кристофер Нолан</span>
-                    </div>
-                    <div class="margin-8"></div>
-                    <h2>Описание Интерстеллар</h2>
-                    <hr />
-                    <div class="well">
-                        Далеко-далеко за словесными горами в стране гласных и согласных живут, рыбные тексты. Сих взгляд это назад вопрос, за на берегу образ имеет. Инициал, взобравшись. Снова однажды вскоре, текстов строчка единственное скатился океана назад?
-                    </div>
-                    <div class="margin-8"></div>
-                    <h2>Отзывы об Интерстеллар</h2>
-                    <hr />
-                    <div class="panel panel-info">
-                        <div class="panel-heading">
-                            <i class="glyphicon glyphicon-user"> <span>Сергей</span></i>
-                        </div>
-                        <div class="panel-body">коментарий...</div>
-                    </div>
-                    <div class="panel panel-info">
-                        <div class="panel-heading">
-                            <i class="glyphicon glyphicon-user"> <span>Дмитрий</span></i>
-                        </div>
-                        <div class="panel-body">коментарий...</div>
-                    </div>
-                    <form>
-                        <div class="form-group">
-                            <input type="text" placeholder="ваше имя" class="form-control input-lg" />
-                        </div>
-                        <div class="form-group">
-                            <textarea class="form-control"></textarea>
-                        </div>
-                        <button class="btn btn-lg btn-warning pull-right">
-                отправить
-              </button>
-                    </form>
-                    <div class="margin-8"></div>
+
+                    <table class="table table-striped">
+                        <thead>
+                            <tr>
+                                <th></th>
+                                <th>Фильм</th>
+                                <th class="text-center">Год</th>
+                                <th class="text-center">Рейтинг</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td class="col-lg-1 col-md-1 col-xs-2">
+                                    <img class="img-responsive img-thumbnail" src=" assets/img/inter.png " alt="интерстеллар " />
+                                </td>
+                                <td class="vert-align">
+                                    <a href="show.html">Интерстеллар</a>
+                                </td>
+                                <td class="text-center vert-align">2014</td>
+                                <td class="text-center vert-align">
+                                    <span class="badge">8.1</span>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td class="col-lg-1 col-md-1 col-xs-2">
+                                    <img class="img-responsive img-thumbnail" src=" assets/img/matrix.png " alt="матрица " />
+                                </td>
+                                <td class="vert-align">
+                                    <a href="#">Матрица</a>
+                                </td>
+                                <td class="text-center vert-align">1999</td>
+                                <td class="text-center vert-align">
+                                    <span class="badge">8.0</span>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td class="col-lg-1 col-md-1 col-xs-2">
+                                    <img class="img-responsive img-thumbnail" src=" assets/img/cloud.png " alt="облачный атлас " />
+                                </td>
+                                <td class="vert-align">
+                                    <a href="#">Облачный атлас</a>
+                                </td>
+                                <td class="text-center vert-align">2012</td>
+                                <td class="text-center vert-align">
+                                    <span class="badge">7.9</span>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td class="col-lg-1 col-md-1 col-xs-2">
+                                    <img class="img-responsive img-thumbnail" src=" assets/img/max.png " alt="безумный макс " />
+                                </td>
+                                <td class="vert-align">
+                                    <a href="#">Безумный Макс</a>
+                                </td>
+                                <td class="text-center vert-align">2015</td>
+                                <td class="text-center vert-align">
+                                    <span class="badge">7.6</span>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                    <div class="margin-8 clear"></div>
                 </div>
 
                 <div class="col-lg-3 col-lg-pull-9">
@@ -175,7 +196,7 @@
                             <ul class="list-group">
                                 <li class="list-group-item list-group-warning">
                                     <span class="badge">8.9</span>
-                                    <a href="show.html">Интерстеллар</a>
+                                    <a href="show.html ">Интерстеллар</a>
                                 </li>
                                 <li class="list-group-item list-group-warning">
                                     <span class="badge">8.7</span>
@@ -191,7 +212,7 @@
                                 </li>
                                 <li class="list-group-item list-group-warning">
                                     <span class="badge">8.9</span>
-                                    <a href="# ">Интерстеллар</a>
+                                    <a href="show.html">Интерстеллар</a>
                                 </li>
                                 <li class="list-group-item list-group-warning">
                                     <span class="badge">8.9</span>
